Update the invoice endpoint and add invoices translations
